- Django:    - corrected the z-index of the menu's

--- a/contrib/django/freppledb/static/styles.css
+++ b/contrib/django/freppledb/static/styles.css
@@ -107,7 +107,7 @@ a {
   position: absolute;
   top: 0px;
   visibility: hidden;
-  z-index: auto;
+  z-index: 10000;
 }
 
 #header div.menu a.menuItem {
